--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Random Restaurant Picker (Groups + Owner)</title>
+  <title>Random Restaurant Picker (Groups + Owner + Tags + Edit)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -63,7 +63,13 @@
     .restaurant-name {
       font-weight: 600;
     }
-    .delete-btn {
+    .btn-row {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+      align-items: flex-end;
+    }
+    .small-btn {
       width: auto;
       padding: 0.2rem 0.5rem;
       font-size: 0.75rem;
@@ -92,6 +98,23 @@
     #authStatus {
       font-size: 0.85rem;
     }
+    #tagOptions {
+      margin-top: 0.3rem;
+      padding: 0.4rem;
+      border-radius: 6px;
+      background: #f8f8f8;
+    }
+    .tag-option {
+      display: inline-flex;
+      align-items: center;
+      margin: 0.1rem 0.4rem 0.1rem 0;
+      font-size: 0.8rem;
+    }
+    .tag-option input {
+      width: auto;
+      margin-right: 0.3rem;
+      margin-top: 0;
+    }
   </style>
 </head>
 <body>
@@ -107,7 +130,7 @@
     </div>
   </div>
 
-  <!-- Group / Family selection -->
+  <!-- Group / List selection -->
   <div class="section">
     <h2 style="font-size:1.1rem;margin:0 0 0.5rem;">Group / List</h2>
     <form id="groupForm">
@@ -117,14 +140,14 @@
           Everyone using the same Group ID shares the same list.
           The first signed-in person to use a new ID becomes its owner.
         </span>
-        <input type="text" id="groupInput" placeholder="stewart-family" required>
+        <input type="text" id="groupInput" placeholder="my-stuff" required>
       </label>
       <button type="submit" style="margin-top:0.6rem;">Use this Group</button>
     </form>
     <div id="currentGroupDisplay"></div>
   </div>
 
-  <!-- Add restaurant -->
+  <!-- Add / edit restaurant -->
   <div class="section">
     <h2 style="font-size:1.1rem;margin:0 0 0.5rem;">Add / Update Restaurant</h2>
     <p class="small" id="editHint"></p>
@@ -140,9 +163,13 @@
         <input type="text" id="tagsInput" placeholder="Italian, cheap, date night">
       </label>
 
+      <div id="tagOptions" class="small">
+        <!-- tag checkboxes will be rendered here -->
+      </div>
+
       <label>
         People who are ok with this (comma separated)
-        <span class="small">Example: John, Bob, Roommate 1</span>
+        <span class="small">Example: John, Bob, Roommate</span>
         <input type="text" id="peopleInput" placeholder="John, Bob, Roommate">
       </label>
 
@@ -201,6 +228,7 @@
       onAuthStateChanged
     } from 'https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js';
 
+    // Your existing Firebase config (unchanged)
     const firebaseConfig = {
       apiKey: "AIzaSyC2xQS-opDsHikzS2DQyCZ7MNIlquENrPY",
       authDomain: "restaurant-picker-82bfa.firebaseapp.com",
@@ -219,12 +247,17 @@
     let currentGroupOwnerUid = null;
     let currentGroupOwnerName = null;
     let restaurants = [];
+    let groupTags = [];
     let currentUser = null;
 
     const authStatusEl = document.getElementById('authStatus');
     const signInBtn = document.getElementById('signInBtn');
     const signOutBtn = document.getElementById('signOutBtn');
     const editHintEl = document.getElementById('editHint');
+
+    const nameInput = document.getElementById('nameInput');
+    const tagsInput = document.getElementById('tagsInput');
+    const peopleInput = document.getElementById('peopleInput');
 
     function normalizeList(str) {
       if (!str) return [];
@@ -287,10 +320,61 @@
       }
 
       if (hasWriteAccess()) {
-        editHintEl.textContent = 'You own this group. You can add and delete restaurants.';
+        editHintEl.textContent = 'You own this group. You can add, edit, and delete restaurants. Use ✏️ Edit to modify an existing one.';
       } else {
         editHintEl.textContent = 'This group is read-only for you. You can view and pick, but only the owner can edit.';
       }
+    }
+
+    function recomputeGroupTags() {
+      const set = new Set();
+      restaurants.forEach(r => {
+        (r.tags || []).forEach(t => {
+          if (t) set.add(t);
+        });
+      });
+      groupTags = Array.from(set).sort();
+    }
+
+    function setTagCheckboxesForTags(tags) {
+      const lowerSet = new Set((tags || []).map(t => t.toLowerCase()));
+      document
+        .querySelectorAll('#tagOptions input[type="checkbox"]')
+        .forEach(cb => {
+          cb.checked = lowerSet.has(cb.value.toLowerCase());
+        });
+    }
+
+    function renderTagOptions() {
+      const container = document.getElementById('tagOptions');
+      container.innerHTML = '';
+
+      if (!currentGroupId) {
+        container.textContent = 'Select a group to see its tags.';
+        return;
+      }
+
+      if (groupTags.length === 0) {
+        container.textContent = 'No tags in this group yet. Type new tags above to start building a list.';
+        return;
+      }
+
+      const info = document.createElement('div');
+      info.textContent = 'Existing tags in this group (tap to add to this restaurant):';
+      container.appendChild(info);
+
+      groupTags.forEach(tag => {
+        const label = document.createElement('label');
+        label.className = 'tag-option';
+
+        const checkbox = document.createElement('input');
+        checkbox.type = 'checkbox';
+        checkbox.value = tag;
+
+        label.appendChild(checkbox);
+        label.appendChild(document.createTextNode(tag));
+        container.appendChild(label);
+      });
     }
 
     function renderList() {
@@ -313,10 +397,10 @@
 
         const left = document.createElement('div');
 
-        const name = document.createElement('div');
-        name.className = 'restaurant-name';
-        name.textContent = r.name;
-        left.appendChild(name);
+        const nameEl = document.createElement('div');
+        nameEl.className = 'restaurant-name';
+        nameEl.textContent = r.name;
+        left.appendChild(nameEl);
 
         const tagsLine = document.createElement('div');
         r.tags.forEach(t => {
@@ -334,9 +418,34 @@
 
         item.appendChild(left);
 
+        const btnCol = document.createElement('div');
+        btnCol.className = 'btn-row';
+
+        const editBtn = document.createElement('button');
+        editBtn.textContent = '✏️ Edit';
+        editBtn.className = 'small-btn';
+        editBtn.disabled = !hasWriteAccess();
+        editBtn.title = hasWriteAccess()
+          ? 'Edit this restaurant'
+          : 'Only the group owner can edit restaurants';
+
+        editBtn.addEventListener('click', () => {
+          if (!hasWriteAccess()) {
+            alert('You do not own this group, so you cannot edit restaurants.');
+            return;
+          }
+          nameInput.value = r.name;
+          tagsInput.value = (r.tags || []).join(', ');
+          peopleInput.value = (r.people || []).join(', ');
+          setTagCheckboxesForTags(r.tags);
+          document.getElementById('addForm').scrollIntoView({ behavior: 'smooth' });
+        });
+
+        btnCol.appendChild(editBtn);
+
         const delBtn = document.createElement('button');
         delBtn.textContent = 'Delete';
-        delBtn.className = 'delete-btn';
+        delBtn.className = 'small-btn';
         delBtn.disabled = !hasWriteAccess();
         delBtn.title = hasWriteAccess()
           ? 'Delete this restaurant'
@@ -350,7 +459,9 @@
           await deleteRestaurant(r.id);
         });
 
-        item.appendChild(delBtn);
+        btnCol.appendChild(delBtn);
+
+        item.appendChild(btnCol);
 
         listDiv.appendChild(item);
       });
@@ -371,8 +482,10 @@
         currentGroupOwnerUid = null;
         currentGroupOwnerName = null;
         restaurants = [];
+        groupTags = [];
         setCurrentGroupDisplay();
         updateEditHint();
+        renderTagOptions();
         renderList();
         return;
       }
@@ -420,7 +533,7 @@
 
       updateEditHint();
 
-      // Load restaurants (even if group doesn't exist yet; will just be empty)
+      // Load restaurants
       restaurants = [];
       const colRef = groupRestaurantsCollection();
       if (colRef) {
@@ -440,6 +553,8 @@
         }
       }
 
+      recomputeGroupTags();
+      renderTagOptions();
       renderList();
     }
 
@@ -513,7 +628,6 @@
         signOutBtn.disabled = true;
       }
       updateEditHint();
-      // Reload current group so ownership info is up to date relative to new user
       await loadGroupAndRestaurants();
     });
 
@@ -535,7 +649,7 @@
       await loadGroupAndRestaurants();
     });
 
-    // --- Add restaurant form ---
+    // --- Add / update restaurant form ---
 
     document.getElementById('addForm').addEventListener('submit', async (event) => {
       event.preventDefault();
@@ -543,19 +657,22 @@
         alert('Select a Group ID first.');
         return;
       }
-      const nameInput = document.getElementById('nameInput');
-      const tagsInput = document.getElementById('tagsInput');
-      const peopleInput = document.getElementById('peopleInput');
 
       const name = nameInput.value.trim();
       if (!name) return;
 
-      const tags = normalizeList(tagsInput.value);
+      const typedTags = normalizeList(tagsInput.value);
+
+      const checkedTags = Array.from(
+        document.querySelectorAll('#tagOptions input[type="checkbox"]:checked')
+      ).map(cb => cb.value.toLowerCase());
+
+      const tagSet = new Set([...typedTags, ...checkedTags]);
+      const tags = Array.from(tagSet);
+
       const people = normalizeList(peopleInput.value);
 
       await saveRestaurantToFirestore(name, tags, people);
-
-      nameInput.value = '';
     });
 
     // --- Random picker ---
